# picture-show

./: build_exe.bat  pyproject.toml  start.bat
src/: main.py
